add edit reminder functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="time">Время</string>
     <string name="client_not_chosen">Клиент не выбран</string>
     <string name="choose_client">Выбрать клиента</string>
-    <string name="create_reminder">Создать напоминание</string>
+    <string name="create">Создать</string>
+    <string name="delete">Удалить</string>
 </resources>
